ปรับหน้าแรกแสดงข้อมูลแต่ละแผนก

--- a/hospital/test.html
+++ b/hospital/test.html
@@ -11,7 +11,7 @@
     dsafafaseaserwarasfasfsfsadfasfsadฟหกฟกฟหฟดฟหดlkasflk
     asfdljasf;
     as;faslfjk
-    ;asjfl;sfaksdfjalskjfalsjfal;skfjas;lfjalsfjsa;djfaslfjsal;dfj
+    ;asjfl;sfaksdfjalskjfalsjfal;skfjas;lfjalsfjsa;djfaslfjsal;dfjasdasdasdasd
 
 </body>
 
